--- a/Operators and Epx/operator.html
+++ b/Operators and Epx/operator.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Introduction JavaScript</title>
+    <title>Operators and Expresssion</title>
 
     <link rel="stylesheet" href="operator.css" />
   </head>
