--- a/Asynchronous JS/index.html
+++ b/Asynchronous JS/index.html
@@ -22,7 +22,7 @@
           </div>
         </article> -->
       </div>
-      <!-- <button class="btn-country">Where am I?</button> -->
+      <button class="btn-country">Where am I?</button>
       <!-- <div class="images"></div> -->
 
       <!-- https://restcountries.com/v2/name/${country} -->
