Array are added auto

--- a/Monist Bank App/index.html
+++ b/Monist Bank App/index.html
@@ -118,7 +118,7 @@
           </div>
 
           <div class="container-operation-box container-operation-box--loan">
-            <p class="operation-heading">Transfer Money</p>
+            <p class="operation-heading">Request a Loan</p>
 
             <form class="input-operation operation-form" action="">
               <!-- <div class="input-box">
@@ -145,7 +145,7 @@
           <div
             class="container-operation-box container-operation-box--close-account"
           >
-            <p class="operation-heading">Transfer Money</p>
+            <p class="operation-heading">Close Account</p>
 
             <form class="input-operation operation-form" action="">
               <div class="input-box">
@@ -154,7 +154,7 @@
                   type="text"
                   name="transfer--recipient"
                 />
-                <label for="">Transfer To</label>
+                <label for="">Username</label>
               </div>
 
               <div class="input-box">
@@ -162,7 +162,7 @@
                   class="input-operation input_transfer-amount"
                   type="number"
                 />
-                <label for="">Amount</label>
+                <label for="">Pin</label>
               </div>
 
               <button class="operation-btn">&rarr;</button>
@@ -194,9 +194,8 @@
           <img src="img/Logout icon.svg" alt="" />&nbsp;
         </button>
       </div>
-      
     </footer>
-    
-    <script src="script.js" ></script>
+
+    <script src="script.js"></script>
   </body>
 </html>
