All the summary calculated and login functionality added

--- a/Monist Bank App/index.html
+++ b/Monist Bank App/index.html
@@ -30,7 +30,6 @@
         <input
           name="password"
           class="login-input login-input-pin"
-          type="password"
           maxlength="4"
           placeholder="Password"
         />
@@ -38,7 +37,7 @@
       </form>
     </nav>
 
-    <main class="main">
+    <main class="main no-visible">
       <div class="balance">
         <p class="balance-text">Current balance</p>
         <h3 class="balance-total">₦000,000</h3>
@@ -172,7 +171,7 @@
       </div>
     </main>
 
-    <footer class="summary">
+    <footer class="summary no-visible">
       <div class="summary-box--wrapper">
         <div class="summary-box">
           <span class="summary-label">in</span>
