Transfer, Loan and Closing of Account Functioality has been added

--- a/Monist Bank App/index.html
+++ b/Monist Bank App/index.html
@@ -112,7 +112,7 @@
                 <label for="">Amount</label>
               </div>
 
-              <button class="operation-btn">&rarr;</button>
+              <button class="operation-btn btn-transfer">&rarr;</button>
             </form>
           </div>
 
@@ -131,13 +131,13 @@
 
               <div class="input-box">
                 <input
-                  class="input-operation input_transfer-amount"
+                  class="input-operation input_loan-amount"
                   type="number"
                 />
                 <label for="">Amount</label>
               </div>
 
-              <button class="operation-btn">&rarr;</button>
+              <button class="operation-btn btn-loan">&rarr;</button>
             </form>
           </div>
 
@@ -149,7 +149,7 @@
             <form class="input-operation operation-form" action="">
               <div class="input-box">
                 <input
-                  class="input-operation input_transfer-user"
+                  class="input-operation input_close-user"
                   type="text"
                   name="transfer--recipient"
                 />
@@ -157,14 +157,11 @@
               </div>
 
               <div class="input-box">
-                <input
-                  class="input-operation input_transfer-amount"
-                  type="number"
-                />
+                <input class="input-operation input_close-pin" type="number" />
                 <label for="">Pin</label>
               </div>
 
-              <button class="operation-btn">&rarr;</button>
+              <button class="operation-btn btn-close">&rarr;</button>
             </form>
           </div>
         </div>
