--- a/Monist Bank App/index.html
+++ b/Monist Bank App/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Monist</title>
     <link rel="stylesheet" href="style.css" />
+
+    <script defer src="script.js"></script>
   </head>
   <body>
     <nav class="main-nav">
@@ -192,6 +194,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
